# fovPathTracing_optixCodeLatest

./: .gitignore  CMakeLists.txt  README.md
OtherProjects_01/01HelloRaytracing/: CMakeLists.txt  draw_solid_color.cu  helloRaytracing.cpp  helloRaytracing.h
OtherProjects_01/02HelloRaytracing/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  deviceProgram.cu  main.cpp
OtherProjects_01/03HelloRaytracing/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  deviceProgram.cu  main.cpp  optix7.h
OtherProjects_01/06HelloPathtracing/: BSDF.cuh  BSSRDF.cuh  CMakeLists.txt  Disney.cuh  LaunchParams.h  Model.cpp  Model.h  OptixDenoiser.cpp  PathTracer.cu  SimplePathtracer.cpp  SimplePathtracer.h  main.cpp
OtherProjects_01/07OpenXRSample/: CMakeLists.txt  main.cpp
OtherProjects_01/08DirectX11Sample/: CMakeLists.txt  data.h  main.cpp
OtherProjects_01/09HelloRaytracingDX11/: CMakeLists.txt  Dx11Window.h  LaunchParams.h  SampleRenderer.cpp  deviceProgram.cu  main.cpp
OtherProjects_01/10OpenXROpenGL/: CMakeLists.txt  main.cpp
OtherProjects_01/11HelloRaytracingOpenXR/: CMakeLists.txt  OptiXRenderer.h  SampleRenderer.cpp  SampleRenderer.h  main.cpp
OtherProjects_02_latest/PT_original/: CMakeLists.txt
OtherProjects_02_latest/PT_sv/: CMakeLists.txt  main.cpp
OtherProjects_02_latest/PT_sv2/: CMakeLists.txt
OtherProjects_02_latest/PT_sv3/: CMakeLists.txt
OtherProjects_02_latest/PT_sv4_vmv/: CMakeLists.txt  SimplePathtracer.cpp  data.tsv  main.cpp
OtherProjects_02_latest/PT_sv4_vmv2/: CMakeLists.txt  Model.cpp  Model.h  SimplePathtracer.cpp  SimplePathtracer.h  deviceProgram.cu  frame_rate_data.tsv  main.cpp  sponza_half_fov_area.tsv
OtherProjects_02_latest/PT_sv4_vmv2/data/: lost_32-16-8.tsv  lost_32.tsv  rendering_time.xlsx  rungholt_32.tsv  rungholt_32_16_8.tsv  san_32.tsv  san_32_16_8.tsv  sponza_fov_32_16_8.tsv  sponza_fov_32_2_1.tsv  sponza_fov_32_4_2.tsv  sponza_fov_32_8_4.tsv  sponza_full_32.tsv
PT_sv5_/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  Probe.h  SimplePathtracer.cpp  deviceProgram.cu  main.cpp  maths.h
cuda/: random.h
sutil/: Camera.h  Scene.cpp  sutil.cpp  sutil.h  vec_math.h
